@@ -1,12 +1,19 @@
 package seedu.address.logic.parser;
 
+import static java.util.Objects.requireNonNull;
 import static seedu.address.logic.Messages.MESSAGE_INVALID_COMMAND_FORMAT;
+import static seedu.address.logic.parser.CliSyntax.PREFIX_NAME;
+import static seedu.address.logic.parser.CliSyntax.PREFIX_TAG;
 
 import java.util.Arrays;
+import java.util.List;
+import java.util.Optional;
+import java.util.stream.Stream;
 
 import seedu.address.logic.commands.FindCommand;
 import seedu.address.logic.parser.exceptions.ParseException;
 import seedu.address.model.person.NameContainsKeywordsPredicate;
+import seedu.address.model.person.PersonMatchesKeywordsPredicate;
 
 /**
  * Parses input arguments and creates a new FindCommand object
@@ -19,15 +26,41 @@ public class FindCommandParser implements Parser<FindCommand> {
      * @throws ParseException if the user input does not conform the expected format
      */
     public FindCommand parse(String args) throws ParseException {
-        String trimmedArgs = args.trim();
-        if (trimmedArgs.isEmpty()) {
+        requireNonNull(args);
+        ArgumentMultimap map = ArgumentTokenizer.tokenize(args, PREFIX_NAME, PREFIX_TAG);
+
+        String preamble = map.getPreamble();
+
+        if (!arePrefixesPresent(map, PREFIX_NAME) && !arePrefixesPresent(map, PREFIX_TAG)) {
             throw new ParseException(
                     String.format(MESSAGE_INVALID_COMMAND_FORMAT, FindCommand.MESSAGE_USAGE));
         }
 
-        String[] nameKeywords = trimmedArgs.split("\\s+");
+        if (!arePrefixesPresent(map, PREFIX_NAME, PREFIX_TAG) || !preamble.isEmpty()) {
+            throw new ParseException(
+                    String.format(MESSAGE_INVALID_COMMAND_FORMAT, FindCommand.MESSAGE_USAGE));
+        }
 
-        return new FindCommand(new NameContainsKeywordsPredicate(Arrays.asList(nameKeywords)));
+        // Get name keywords
+        List<String> nameKeywords = map.getValue(PREFIX_NAME)
+                .map(String::trim)
+                .filter(s -> !s.isEmpty())
+                .map(s -> Arrays.asList(s.split("\\s+")))
+                .orElse(List.of());
+
+        // Get tag keywords
+        List<String> tagKeywords = map.getValue(PREFIX_TAG)
+                .map(String::trim)
+                .filter(s -> !s.isEmpty())
+                .map(s -> Arrays.asList(s.split("\\s+")))
+                .orElse(List.of());
+
+
+        return new FindCommand(new PersonMatchesKeywordsPredicate(nameKeywords, tagKeywords));
+    }
+
+    private static boolean arePrefixesPresent(ArgumentMultimap argumentMultimap, Prefix... prefixes) {
+        return Stream.of(prefixes).allMatch(prefix -> argumentMultimap.getValue(prefix).isPresent());
     }
 
 }
